<?xml version="1.0"?>
<package>
  <name>ros_tutorials</name>
  <version>0.5.1</version>
  <description>
    ros_tutorials contains packages that demonstrate various features of ROS,
    as well as support packages which help demonstrate those features.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/ros_tutorials</url>
  <url type="bugtracker">https://github.com/ros/ros_tutorials/issues</url>
  <url type="repository">https://github.com/ros/ros_tutorials</url>
  <author>Josh Faust</author>
  <author>Ken Conley</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp_tutorials</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>turtlesim</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
